--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 22:05:02 2018</p>
+         Last Run: Sat Dec  1 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>38</td>
+                        <td>36</td>
                         <td>80</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>98</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>24</td>
-                        <td>76</td>
+                        <td>15</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>99</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-3</td>
                         <td>-8</td>
                         <td>15</td>
-                        <td>73</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>94</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "38",
-                 "24",
+                 "36",
+                 "15",
                  "15"
                ]
              },
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "76",
-                 "73"
+                 "75",
+                 "71"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "98",
-                 "99",
-                 "94"
+                 "97",
+                 "97",
+                 "91"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 22:05:02 2018</p>
+         Last Run: Sat Dec  1 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-15</td>
+                        <td>-12</td>
+                        <td>-16</td>
                         <td>6</td>
-                        <td>89</td>
+                        <td>90</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -265,13 +265,13 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-12</td>
-                        <td>-17</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>5</td>
                         <td>92</td>
                         <td>0</td>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-15",
+                 "-16",
                  "-17",
-                 "-17"
+                 "-18"
                ]
              },
              {
@@ -316,9 +316,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11",
                  "-12",
-                 "-12"
+                 "-12",
+                 "-13"
                ]
              }
            ]
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "89",
+                 "90",
                  "89",
                  "92"
                ]
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "18",
+                 "23",
+                 "17",
                  "15"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 22:05:02 2018</p>
+         Last Run: Sat Dec  1 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -468,17 +468,17 @@
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-14</td>
-                        <td>-19</td>
+                        <td>-20</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSW</td>
                         <td>1</td>
                      </tr>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-18",
-                 "-19",
+                 "-20",
                  "-19"
                ]
              },
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "81",
-                 "81",
+                 "82",
                  "84"
                ]
              },
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
+                 "2",
                  "1",
                  "1"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 22:05:02 2018</p>
+         Last Run: Sat Dec  1 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-5</td>
-                        <td>-10</td>
-                        <td>0</td>
-                        <td>56</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>39</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>Clear</td>
+                        <td>-6</td>
+                        <td>-11</td>
                         <td>0</td>
                         <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>38</td>
+                        <td>17</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 AM</td>
+                        <td>Clear</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>0</td>
+                        <td>50</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>37</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
+                 "-11",
                  "-8",
                  "-6"
                ]
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-5",
+                 "-6",
                  "-4",
                  "-2"
                ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
                  "53",
-                 "51"
+                 "50",
+                 "48"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
-                 "38",
-                 "37"
+                 "17",
+                 "16",
+                 "16"
                ]
              }
            ]
