--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 23:05:03 2018</p>
+         Last Run: Sun Dec  2 00:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -32,11 +32,11 @@
                         <td>12:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
-                        <td>-9</td>
-                        <td>36</td>
+                        <td>-10</td>
+                        <td>37</td>
                         <td>80</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNW</td>
                         <td>97</td>
                      </tr>
@@ -46,11 +46,11 @@
                         <td>-3</td>
                         <td>-8</td>
                         <td>15</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
+                 "-10",
                  "-8",
                  "-8"
                ]
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "36",
+                 "37",
                  "15",
                  "15"
                ]
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "75",
+                 "74",
                  "71"
                ]
              },
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "97",
-                 "91"
+                 "98",
+                 "92"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 23:05:03 2018</p>
+         Last Run: Sun Dec  2 00:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-12</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>90</td>
+                        <td>92</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>23</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-12</td>
                         <td>-17</td>
-                        <td>5</td>
-                        <td>89</td>
+                        <td>6</td>
+                        <td>91</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-13</td>
                         <td>-18</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>92</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "5",
-                 "5"
+                 "6",
+                 "6"
                ]
              },
              {
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "90",
-                 "89",
+                 "92",
+                 "91",
                  "92"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "17",
-                 "15"
+                 "39",
+                 "36",
+                 "32"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 23:05:03 2018</p>
+         Last Run: Sun Dec  2 00:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -467,18 +467,18 @@
                         <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>S</td>
-                        <td>2</td>
+                        <td>SSW</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-14</td>
-                        <td>-20</td>
+                        <td>-19</td>
                         <td>6</td>
                         <td>82</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
                         <td>1</td>
                      </tr>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-18",
-                 "-20",
+                 "-19",
                  "-19"
                ]
              },
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "1",
                  "1"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 23:05:03 2018</p>
+         Last Run: Sun Dec  2 00:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -676,22 +676,22 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
-                        <td>-11</td>
+                        <td>-7</td>
+                        <td>-12</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-5</td>
+                        <td>-10</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -700,14 +700,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>0</td>
                         <td>48</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-11",
-                 "-8",
-                 "-6"
+                 "-12",
+                 "-10",
+                 "-7"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-6",
-                 "-4",
-                 "-2"
+                 "-7",
+                 "-5",
+                 "-3"
                ]
              }
            ]
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "50",
+                 "55",
+                 "51",
                  "48"
                ]
              },
@@ -829,7 +829,7 @@
                "data":[
                  "17",
                  "16",
-                 "16"
+                 "17"
                ]
              }
            ]
