--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 01:05:02 2018</p>
+         Last Run: Sun Dec  2 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>37</td>
+                        <td>35</td>
                         <td>78</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -50,19 +50,19 @@
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
-                        <td>-2</td>
-                        <td>-7</td>
-                        <td>15</td>
-                        <td>71</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>17</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>91</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-8",
                  "-8",
-                 "-7"
+                 "-8"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "-3",
                  "-3",
-                 "-2"
+                 "-3"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "37",
+                 "35",
                  "15",
-                 "15"
+                 "17"
                ]
              },
              {
@@ -173,7 +173,7 @@
                "data":[
                  "78",
                  "74",
-                 "71"
+                 "72"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "97",
-                 "91"
+                 "98",
+                 "98",
+                 "94"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 01:05:02 2018</p>
+         Last Run: Sun Dec  2 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-11</td>
                         <td>-15</td>
                         <td>6</td>
-                        <td>89</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,19 +261,19 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>87</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>37</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-12</td>
                         <td>-17</td>
-                        <td>6</td>
-                        <td>89</td>
+                        <td>5</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -377,7 +377,7 @@
                "data":[
                  "6",
                  "6",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "89",
                  "87",
-                 "89"
+                 "86",
+                 "88"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "37",
+                 "46",
+                 "39",
                  "35"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 01:05:02 2018</p>
+         Last Run: Sun Dec  2 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,10 +461,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-13</td>
-                        <td>-18</td>
-                        <td>6</td>
-                        <td>80</td>
+                        <td>-12</td>
+                        <td>-17</td>
+                        <td>7</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
@@ -476,10 +476,10 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>S</td>
+                        <td>SSW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -488,10 +488,10 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>S</td>
+                        <td>SSW</td>
                         <td>1</td>
                      </tr>
                   </tbody>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-18",
+                 "-17",
                  "-18",
                  "-19"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-13",
+                 "-12",
                  "-13",
                  "-14"
                ]
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "7",
                  "6",
                  "6"
                ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
                  "81",
-                 "83"
+                 "82",
+                 "85"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 01:05:02 2018</p>
+         Last Run: Sun Dec  2 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -681,9 +681,9 @@
                         <td>0</td>
                         <td>55</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -691,11 +691,11 @@
                         <td>-5</td>
                         <td>-10</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>16</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>17</td>
+                        <td>W</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "51",
-                 "48"
+                 "52",
+                 "49"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "16",
-                 "17"
+                 "20",
+                 "20",
+                 "21"
                ]
              }
            ]
