--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 05:05:02 2018</p>
+         Last Run: Sun Dec  2 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>39</td>
-                        <td>78</td>
+                        <td>41</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNW</td>
@@ -45,8 +45,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>16</td>
-                        <td>74</td>
+                        <td>20</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -57,7 +57,7 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>17</td>
+                        <td>15</td>
                         <td>71</td>
                         <td>0</td>
                         <td>14</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "39",
-                 "16",
-                 "17"
+                 "41",
+                 "20",
+                 "15"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "74",
+                 "79",
+                 "75",
                  "71"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 05:05:02 2018</p>
+         Last Run: Sun Dec  2 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -253,31 +253,31 @@
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>44</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-11</td>
                         <td>-16</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>36</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-12</td>
                         <td>-17</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>32</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "6",
-                 "6"
+                 "5",
+                 "5"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "36",
-                 "32"
+                 "32",
+                 "23",
+                 "19"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 05:05:02 2018</p>
+         Last Run: Sun Dec  2 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
@@ -476,7 +476,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -487,8 +487,8 @@
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-19</td>
-                        <td>6</td>
-                        <td>84</td>
+                        <td>5</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -592,7 +592,7 @@
                "data":[
                  "6",
                  "6",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "81",
-                 "84"
+                 "82",
+                 "82",
+                 "85"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 05:05:02 2018</p>
+         Last Run: Sun Dec  2 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -679,11 +679,11 @@
                         <td>-7</td>
                         <td>-12</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>20</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -691,11 +691,11 @@
                         <td>-5</td>
                         <td>-10</td>
                         <td>0</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>20</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "52",
-                 "49"
+                 "56",
+                 "53",
+                 "50"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
-                 "20",
-                 "21"
+                 "15",
+                 "15",
+                 "15"
                ]
              }
            ]
