--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 11:05:02 2018</p>
+         Last Run: Mon Dec  3 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,28 +32,16 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-10</td>
-                        <td>-16</td>
+                        <td>-15</td>
                         <td>5</td>
                         <td>80</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>25</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-10</td>
-                        <td>-16</td>
-                        <td>4</td>
-                        <td>78</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>19</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-15</td>
@@ -62,7 +50,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>13</td>
+                        <td>15</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Clear</td>
+                        <td>-10</td>
+                        <td>-15</td>
+                        <td>4</td>
+                        <td>79</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-16",
-                 "-16",
+                 "-15",
+                 "-15",
                  "-15"
                ]
              },
@@ -173,7 +173,7 @@
                "data":[
                  "80",
                  "78",
-                 "78"
+                 "79"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "25",
-                 "19",
-                 "13"
+                 "20",
+                 "15",
+                 "10"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 11:05:02 2018</p>
+         Last Run: Mon Dec  3 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,8 +246,8 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
+                        <td>-14</td>
+                        <td>-19</td>
                         <td>7</td>
                         <td>86</td>
                         <td>0</td>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-20",
+                 "-19",
                  "-20",
                  "-22"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-15",
+                 "-14",
                  "-15",
                  "-16"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 11:05:02 2018</p>
+         Last Run: Mon Dec  3 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -460,27 +460,27 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-8</td>
                         <td>-13</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>43</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-6</td>
                         <td>-10</td>
                         <td>1</td>
-                        <td>66</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>45</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>1</td>
-                        <td>63</td>
-                        <td>0</td>
+                        <td>60</td>
+                        <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>50</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "66",
-                 "63"
+                 "65",
+                 "63",
+                 "60"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "45",
-                 "50"
+                 "21",
+                 "24",
+                 "32"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 11:05:02 2018</p>
+         Last Run: Mon Dec  3 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -680,10 +680,10 @@
                         <td>-6</td>
                         <td>2</td>
                         <td>62</td>
-                        <td>1</td>
-                        <td>13</td>
+                        <td>0</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>48</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -693,21 +693,21 @@
                         <td>2</td>
                         <td>58</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>55</td>
+                        <td>3</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>43</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -807,7 +807,7 @@
                "data":[
                  "2",
                  "2",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -818,7 +818,7 @@
                "data":[
                  "62",
                  "58",
-                 "55"
+                 "56"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "50",
                  "48",
-                 "46",
-                 "43"
+                 "45"
                ]
              }
            ]
