--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 14:05:02 2018</p>
+         Last Run: Mon Dec  3 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,31 +34,31 @@
                         <td>-9</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>76</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>15</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-10</td>
-                        <td>-15</td>
-                        <td>4</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
                         <td>18</td>
                      </tr>
                      <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-10</td>
+                        <td>-15</td>
+                        <td>3</td>
+                        <td>74</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>16</td>
+                     </tr>
+                     <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-10</td>
+                        <td>-15</td>
                         <td>4</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -91,7 +91,7 @@
                "data":[
                  "-14",
                  "-15",
-                 "-16"
+                 "-15"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "-9",
                  "-10",
-                 "-11"
+                 "-10"
                ]
              }
            ]
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "4",
+                 "3",
                  "4"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "76",
-                 "77"
+                 "75",
+                 "74",
+                 "76"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
                  "18",
+                 "16",
                  "9"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 14:05:02 2018</p>
+         Last Run: Mon Dec  3 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
+                        <td>-14</td>
+                        <td>-19</td>
                         <td>7</td>
-                        <td>87</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -265,7 +265,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-20",
+                 "-19",
                  "-20",
                  "-22"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-15",
+                 "-14",
                  "-15",
                  "-16"
                ]
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
+                 "86",
                  "88",
                  "93"
                ]
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "4"
+                 "6",
+                 "6",
+                 "5"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 14:05:02 2018</p>
+         Last Run: Mon Dec  3 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-7</td>
                         <td>-12</td>
                         <td>1</td>
-                        <td>64</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -474,13 +474,13 @@
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>-5</td>
-                        <td>-10</td>
+                        <td>-9</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>0</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>29</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-12",
-                 "-10",
+                 "-9",
                  "-7"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
                  "62",
-                 "57"
+                 "59",
+                 "55"
                ]
              },
              {
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "22",
-                 "25",
-                 "29"
+                 "24",
+                 "27"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 14:05:02 2018</p>
+         Last Run: Mon Dec  3 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -679,10 +679,10 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>SW</td>
+                        <td>11</td>
+                        <td>WSW</td>
                         <td>56</td>
                      </tr>
                      <tr>
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
+                 "65",
                  "62",
                  "60"
                ]
